# portfolio

algorithms-and-data-structures/huffman-encoder/: HuffmanCodes.sln
algorithms-and-data-structures/path-finder/: ExplanationForAdditional.md  README.md
algorithms-and-data-structures/stack-queue-calculator/: Calculator.sln
cryptography/AES-CBC:AES-CFB-attacks-modelling/: AesCbc.cs  AesCfb.cs  AesEcb.cs  BaseAesCipher.cs  CbcBitFlipAttack.cs  CbcReusedIvAttack.cs  CfbBitFlipAttack.cs  CfbReusedIvAttack.cs  CryptographyAes.sln  EcbBlockSubstitution.cs  EcbPatternAnalysis.cs  KeyGenerator.cs  NistTests.cs  Program.cs
distributed systems/: BookingDemo.sln  README.md  docker-compose.yml
software-engineering-practices/amateur-football-league-management-system/: CMakeLists.txt  OOP_design.md  README.md  Requirements_RefAssign.xlsx  Test_Cases_RefAssign.xlsx
software-engineering-practices/amateur-football-league-management-system/refAssign/: main.cpp  main_tests.cpp  refassign
software-engineering-practices/amateur-football-league-management-system/refAssign/logic/: LeagueTable.cpp  LeagueTable.hpp  RefereeAssigner.cpp  RefereeAssigner.hpp  ScheduleGenerator.cpp  ScheduleGenerator.hpp
software-engineering-practices/amateur-football-league-management-system/refAssign/models/: Match.cpp  Match.hpp  MatchReport.cpp  MatchReport.hpp  Player.cpp  Player.hpp  Referee.cpp  Referee.hpp  Team.cpp  Team.hpp
software-engineering-practices/amateur-football-league-management-system/refAssign/tests/: test_assigner.cpp  test_schedule.cpp  test_team.cpp
(+139 files in other folders)
